--- a/charts/stable/vikunja/values.yaml
+++ b/charts/stable/vikunja/values.yaml
@@ -25,7 +25,16 @@ configmap:
     enabled: true
     data:
       nginx-config: |
-        {{ (include "vikunja.nginx" . | fromYaml).nginx }}
+        server {
+          listen {{ .Values.service.main.ports.main.port }};
+          location / {
+              proxy_pass http://localhost:80;
+          }
+          location ~* ^/(api|dav|\.well-known)/ {
+              proxy_pass http://localhost:3456;
+              client_max_body_size {{ .Values.vikunja.files.maxsize | upper | trimSuffix "B" }};
+          }
+        }
 
 vikunja:
   service:
@@ -47,6 +56,18 @@ vikunja:
     enabled: true
     origins: []
     maxage: 0
+  ratelimit:
+    enabled: false
+    kind: user
+    period: 60
+    limit: 100
+  files:
+    maxsize: 20MB
+  avatar:
+    gravatarexpiration: 3600
+  legal:
+    imprinturl: ""
+    privacyurl: ""
   mailer:
     enabled: false
     host: ""
@@ -69,18 +90,7 @@ vikunja:
     echo: false
     events: stdout
     eventslevel: info
-  ratelimit:
-    enabled: false
-    kind: user
-    period: 60
-    limit: 100
-  files:
-    maxsize: 20MB
-  avatar:
-    gravatarexpiration: 3600
-  legal:
-    imprinturl: ""
-    privacyurl: ""
+
   metrics:
     enabled: false
     username: ""
