--- a/charts/stable/vikunja/questions.yaml
+++ b/charts/stable/vikunja/questions.yaml
@@ -117,6 +117,367 @@ questions:
                 schema:
                   type: boolean
                   default: true
+        - variable: cors
+          label: CORS
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: enabled
+                label: Enabled
+                description: Whether to enable or disable cors headers.
+                schema:
+                  type: boolean
+                  default: true
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: origins
+                      label: Origins
+                      description: A list of origins which may access the api. These need to include the protocol (http:// or https://) and port, if any.
+                      schema:
+                        type: list
+                        default: []
+                        items:
+                          - variable: originEntry
+                            label: ""
+                            schema:
+                              type: string
+                              required: true
+                              default: ""
+                    - variable: maxage
+                      label: Max Age
+                      description: How long (in seconds) the results of a preflight request can be cached.
+                      schema:
+                        type: int
+                        required: true
+                        default: 0
+        - variable: ratelimit
+          label: Rate Limit
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: enabled
+                label: Enabled
+                description: Whether or not to enable the rate limit.
+                schema:
+                  type: boolean
+                  default: false
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: kind
+                      label: Kind
+                      description: The kind on which rates are based. Can be either “user” for a rate limit per user or “ip” for an ip-based rate limit.
+                      schema:
+                        type: string
+                        required: true
+                        default: user
+                        enum:
+                          - value: user
+                            description: User
+                          - value: ip
+                            description: IP
+                    - variable: period
+                      label: Period
+                      description: The time period in seconds for the limit.
+                      schema:
+                        type: int
+                        required: true
+                        default: 60
+                    - variable: limit
+                      label: Limit
+                      description: The max number of requests a user is allowed to do in the configured time period.
+                      schema:
+                        type: int
+                        required: true
+                        default: 100
+        - variable: files
+          label: Files
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: maxsize
+                label: Max Size
+                description: The maximum size of a file, as a human-readable string.
+                schema:
+                  type: string
+                  required: true
+                  default: 20MB
+        - variable: avatar
+          label: Avatar
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: gravatarexpiration
+                label: Gravatar Expiration
+                description: When using gravatar, this is the duration in seconds until a cached gravatar user avatar expires
+                schema:
+                  type: int
+                  required: true
+                  default: 3600
+        - variable: legal
+          label: Legal
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: imprinturl
+                label: Imprint URL
+                description: Legal urls Will be shown in the frontend if configured here
+                schema:
+                  type: string
+                  default: ""
+              - variable: privacyurl
+                label: Privacy URL
+                description: Legal urls Will be shown in the frontend if configured here
+                schema:
+                  type: string
+                  default: ""
+        - variable: mailer
+          label: Mailer
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: enabled
+                label: Enabled
+                description: Whether to enable the mailer or not. If it is disabled, all users are enabled right away and password reset is not possible.
+                schema:
+                  type: boolean
+                  default: false
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: host
+                      label: Host
+                      description: SMTP Host
+                      schema:
+                        type: string
+                        required: true
+                        default: ""
+                    - variable: port
+                      label: Port
+                      description: SMTP Port
+                      schema:
+                        type: int
+                        required: true
+                        default: 587
+                    - variable: authtype
+                      label: Auth Type
+                      description: SMTP Auth Type. Can be either plain, login or cram-md5.
+                      schema:
+                        type: string
+                        required: true
+                        default: plain
+                        enum:
+                          - value: plain
+                            description: Plain
+                          - value: login
+                            description: Login
+                          - value: cram-md5
+                            description: Cram-MD5
+                    - variable: username
+                      label: Username
+                      description: SMTP Username
+                      schema:
+                        type: string
+                        required: true
+                        default: ""
+                    - variable: password
+                      label: Password
+                      description: SMTP Password
+                      schema:
+                        type: string
+                        required: true
+                        default: ""
+                    - variable: fromemail
+                      label: From E-Mail
+                      description: The default from address when sending emails
+                      schema:
+                        type: string
+                        required: true
+                        default: ""
+                    - variable: skiptlsverify
+                      label: Skip TLS Verify
+                      description: Wether to skip verification of the tls certificate on the server
+                      schema:
+                        type: boolean
+                        default: false
+                    - variable: forcessl
+                      label: Force SSL
+                      description: By default, vikunja will try to connect with starttls, use this option to force it to use ssl.
+                      schema:
+                        type: boolean
+                        default: true
+                    - variable: queuelength
+                      label: Queue Length
+                      description: The length of the mail queue.
+                      schema:
+                        type: int
+                        required: true
+                        default: 100
+                    - variable: queuetimeout
+                      label: Queue Timeout
+                      description: The timeout in seconds after which the current open connection to the mail server will be closed.
+                      schema:
+                        type: int
+                        required: true
+                        default: 100
+        - variable: log
+          label: Log
+          schema:
+            additional_attrs: true
+            type: dict
+            attrs:
+              - variable: enabled
+                label: Enabled
+                description: Whether to show any logging at all or none
+                schema:
+                  type: boolean
+                  default: false
+                  show_subquestions_if: true
+                  subquestions:
+                    - variable: path
+                      label: Path
+                      description: A folder where all the log files should go.
+                      schema:
+                        type: string
+                        required: true
+                        default: /app/vikunja/logs
+                    - variable: standard
+                      label: Standard
+                      description: Where the normal log should go.
+                      schema:
+                        type: string
+                        required: true
+                        default: stdout
+                        enum:
+                          - value: stdout
+                            description: stdout
+                          - value: stderr
+                            description: stderr
+                          - value: file
+                            description: File
+                          - value: "off"
+                            level: "Off"
+                    - variable: level
+                      label: Level
+                      description: Change the log level.
+                      schema:
+                        type: string
+                        show_if: [["standard", "!=", "off"]]
+                        required: true
+                        default: INFO
+                        enum:
+                          - value: INFO
+                            description: INFO
+                          - value: NOTICE
+                            description: NOTICE
+                          - value: WARNING
+                            description: WARNING
+                          - value: ERROR
+                            description: ERROR
+                          - value: CRITICAL
+                            description: CRITICAL
+                          - value: DEBUG
+                            description: DEBUG
+                    - variable: database
+                      label: Database
+                      description: Whether or not to log database queries. Useful for debugging.
+                      schema:
+                        type: string
+                        default: "off"
+                        enum:
+                          - value: stdout
+                            description: stdout
+                          - value: stderr
+                            description: stderr
+                          - value: file
+                            description: File
+                          - value: "off"
+                            description: "Off"
+                    - variable: databaselevel
+                      label: Database Level
+                      description: The log level for database log messages.
+                      schema:
+                        type: string
+                        show_if: [["database", "!=", "off"]]
+                        required: true
+                        default: INFO
+                        enum:
+                          - value: INFO
+                            description: INFO
+                          - value: NOTICE
+                            description: NOTICE
+                          - value: WARNING
+                            description: WARNING
+                          - value: ERROR
+                            description: ERROR
+                          - value: CRITICAL
+                            description: CRITICAL
+                          - value: DEBUG
+                            description: DEBUG
+                    - variable: http
+                      label: HTTP
+                      description: Whether to log http requests or not.
+                      schema:
+                        type: string
+                        default: stdout
+                        enum:
+                          - value: stdout
+                            description: stdout
+                          - value: stderr
+                            description: stderr
+                          - value: file
+                            description: File
+                          - value: "off"
+                            description: "Off"
+                    - variable: echo
+                      label: Echo
+                      description: Echo has its own logging which usually is unnecessary, which is why it is disabled by default.
+                      schema:
+                        type: string
+                        default: "off"
+                        enum:
+                          - value: stdout
+                            description: stdout
+                          - value: stderr
+                            description: stderr
+                          - value: file
+                            description: File
+                          - value: "off"
+                            description: "Off"
+                    - variable: events
+                      label: Events
+                      description: Whether or not to log events.
+                      schema:
+                        type: string
+                        default: stdout
+                        enum:
+                          - value: stdout
+                            description: stdout
+                          - value: stderr
+                            description: stderr
+                          - value: file
+                            description: File
+                          - value: "off"
+                            description: "Off"
+                    - variable: eventslevel
+                      label: Events Level
+                      description: The log level for event log messages.
+                      schema:
+                        type: string
+                        show_if: [["events", "!=", "off"]]
+                        required: true
+                        default: INFO
+                        enum:
+                          - value: INFO
+                            description: INFO
+                          - value: ERROR
+                            description: ERROR
+                          - value: DEBUG
+                            description: DEBUG
 # Include{containerConfig}
 # Include{serviceRoot}
         - variable: main
